# tags

./: README.md
tags-server/: Cargo.toml
tags_app/: README.md  pubspec.yaml
tags_app/android/app/: build.gradle
tags_app/android/app/src/main/: AndroidManifest.xml
tags_app/android/app/src/main/kotlin/com/example/tags_app/: MainActivity.kt
tags_app/ios/Runner/: Info.plist
tags_app/ios/Runner.xcodeproj/: project.pbxproj
tags_app/linux/: CMakeLists.txt  my_application.cc
tags_app/macos/Runner.xcodeproj/: project.pbxproj
tags_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
tags_app/macos/Runner/Configs/: AppInfo.xcconfig
tags_app/test/: widget_test.dart
tags_app/web/: index.html  manifest.json
tags_app/windows/: CMakeLists.txt
tags_app/windows/runner/: Runner.rc  main.cpp
tags_server/: Cargo.toml
tags_server/src/: main.rs  tags.rs
