[package]
name = 'tags_server'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = '0.6.20'
sqlx = { version = '0.7.2', features = ['runtime-tokio', 'sqlite', 'macros', 'chrono'] }
tokio = { version = '*', features = ['full'] }
tracing-subscriber = '*'
tracing = '*'
serde = { version = '1.0.192', features = ['derive'] }
serde_json = '*'
anyhow = '*'
